apps/production/home-assistant/namespace.yaml
# apps/production/home-assistant/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${AUTOMATION_NAMESPACE}
