apps/production/home-assistant/ingressroute-patch.yaml
# apps/production/home-assistant/ingressroute-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
spec:
  routes:
    - match: "Host(`ha.${MAIN_DOMAIN}`)"
      kind: Rule
      services:
        - name: homeassistant
          port: 80
